# realitylib

./: README.md  build.gradle  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.c
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml  CMakeLists.txt  main.c
